do some edits in pages and styles

--- a/cart.html
+++ b/cart.html
@@ -19,8 +19,9 @@
       <div class="container header__wrap">
          <!-- left container -->
          <div class="header__left">
-            <a class="header-left__logo" href="index.html" target="_blank">
-               <img class="header-left-logo__img" src="assets/img/header-footer/logo.png" alt="logo BRAND">
+            <a class="header-left__logo" href="index.html">
+               <img class="header-left-logo__img" src="img/header-footer/logo.png" width="44" height="38"
+                  alt="logo BRAND">
             </a>
             <svg class="header-left__search" width="27" height="28" viewBox="0 0 27 28" fill="none"
                xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +38,7 @@
                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
             </svg>
             <!-- account  -->
-            <a class="header-right__account" href="#">
+            <a class="header-right__account" href="registration.html">
                <svg class="header-right-account__img" width="29" height="29" viewBox="0 0 29 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -70,35 +71,39 @@
       <fotm action="#" class="shopping__wrap container">
          <!-- Cards product -->
          <div class="shopping__card">
-            <img class="shopping-card__img" src="assets/img/cart/shopping-card1.jpg" width="262" height="306" alt="product" class="shopping-card__img">
-            <a class="shopping-card__name" href="product.html" >
-               <h3 class="shopping-name__h3">MANGO  PEOPLE  T-SHIRT</h3>
+            <img class="shopping-card__img" src="assets/img/cart/shopping-card1.jpg" width="262" height="306"
+               alt="product" class="shopping-card__img">
+            <a class="shopping-card__name" href="product.html">
+               <h3 class="shopping-name__h3">MANGO PEOPLE T-SHIRT</h3>
                <p class="shopping-card__text">Price: <span class="shopping-card__text-color">$300</span></p>
                <p class="shopping-card__text">Color: <span class="shopping-card__text-span">Red</span></p>
                <p class="shopping-card__text">Size:<span class="shopping-card__text-span">Xl</span></p>
-               <p class="shopping-card__text">Quantity:	</p>
-               <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required min="1"  placeholder="2">
+               <p class="shopping-card__text">Quantity: </p>
+               <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required min="1"
+                  placeholder="2">
             </a>
             <!-- close button -->
-            <picture class="" >
+            <picture class="">
                <source srcset="assets/img/cart/close.svg">
-               <img src="assets/img/cart/close-jpg.jpg" alt="close button">               
+               <img src="assets/img/cart/close-jpg.jpg" alt="close button">
             </picture>
          </div>
          <div class="shopping__card">
-            <img class="shopping-card__img" src="assets/img/cart/shopping-card2.jpg" width="262" height="306" alt="product" class="shopping-card__img">
-            <a class="shopping-card__name" href="product.html" >
-               <h3 class="shopping-name__h3">MANGO  PEOPLE  T-SHIRT</h3>
+            <img class="shopping-card__img" src="assets/img/cart/shopping-card2.jpg" width="262" height="306"
+               alt="product" class="shopping-card__img">
+            <a class="shopping-card__name" href="product.html">
+               <h3 class="shopping-name__h3">MANGO PEOPLE T-SHIRT</h3>
                <p class="shopping-card__text">Price: <span class="shopping-card__text-color">$300</span></p>
                <p class="shopping-card__text">Color: <span class="shopping-card__text-span">Red</span></p>
                <p class="shopping-card__text">Size:<span class="shopping-card__text-span">Xl</span></p>
-               <p class="shopping-card__text">Quantity:	</p>
-               <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required min="1"  placeholder="2">
+               <p class="shopping-card__text">Quantity: </p>
+               <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required min="1"
+                  placeholder="2">
             </a>
             <!-- close button -->
-            <picture class="" >
+            <picture class="">
                <source srcset="assets/img/cart/close.svg">
-               <img src="assets/img/cart/close-jpg.jpg" alt="close button">               
+               <img src="assets/img/cart/close-jpg.jpg" alt="close button">
             </picture>
          </div>
          <!-- Button cart -->
@@ -339,9 +344,9 @@
          <div class="shopping__totalcost">
             <p class="shopping__small">Sub total</p>
             <p class="shopping__small">$900</p>
-            <h5 class="shopping__h5 shopping-totalcost__indent">GRAND TOTAL<span
-                  class="shopping__h5-collor">$900</span></h5>
-            <a href="#"  class="shopping-totalcost__button">proceed to checkout</a>
+            <h5 class="shopping__h5 shopping-totalcost__indent">GRAND TOTAL<span class="shopping__h5-collor">$900</span>
+            </h5>
+            <a href="#" class="shopping-totalcost__button">proceed to checkout</a>
          </div>
       </fotm>
    </section>
@@ -351,7 +356,7 @@
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
-            <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
+            <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
                alt="avatar">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
@@ -387,8 +392,7 @@
    </footer> <!-- Footer end -->
 
    <!-- Script  -->
-   <script src="assets/js/script.js"></script>
-
+   <script src="js/script.js"></script>
 </body>
 
 </html>
