--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div class="container header__wrap">
          <!-- left container -->
          <div class="header__left">
-            <a class="header-left__logo" href="index.html" target="_blank">
-               <img class="header-left-logo__img" src="assets/img/header-footer/logo.png" alt="logo BRAND">
+            <a class="header-left__logo" href="index.html">
+               <img class="header-left-logo__img" src="img/header-footer/logo.png" width="44" height="38"
+                  alt="logo BRAND">
             </a>
             <svg class="header-left__search" width="27" height="28" viewBox="0 0 27 28" fill="none"
                xmlns="http://www.w3.org/2000/svg">
@@ -102,8 +103,9 @@
          <div class="product__grid-wrap">
             <!-- Card-1  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card1.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card1.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -112,8 +114,9 @@
             </div>
             <!-- Card-2  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card2.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card2.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -122,8 +125,9 @@
             </div>
             <!-- Card-3  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card3.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card3.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -132,8 +136,9 @@
             </div>
             <!-- Card-4  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card4.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card4.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -142,8 +147,9 @@
             </div>
             <!-- Card-5  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card5.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card5.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -152,8 +158,9 @@
             </div>
             <!-- Card-6  -->
             <div class="product__card">
-               <img src="assets/img/main/product-card6.jpg" alt="product card" class="product-card__img">
-               <a href="product.html" class="product-card__name" target="_blank">
+               <img src="img/main/product-card6.jpg" width="360" height="420" alt="product card"
+                  class="product-card__img">
+               <a href="product.html" class="product-card__name">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                      arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -161,7 +168,7 @@
                </a>
             </div>
          </div>
-         <a href="catalog.html" class="product__button" target="blank">Browse All Product</a>
+         <a href="catalog.html" class="product__button">Browse All Product</a>
       </article>
    </section>
 
@@ -228,8 +235,8 @@
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
-            <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
-               alt="">
+            <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
+               alt="avatar">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
                   purus condimentum“</span></h4>
@@ -264,7 +271,7 @@
    </footer> <!-- Footer end -->
 
    <!-- Script  -->
-   <script src="assets/js/script.js"></script>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
