--- a/product.html
+++ b/product.html
@@ -19,8 +19,9 @@
       <div class="container header__wrap">
          <!-- left container -->
          <div class="header__left">
-            <a class="header-left__logo" href="index.html" target="_blank">
-               <img class="header-left-logo__img" src="assets/img/header-footer/logo.png" alt="logo BRAND">
+            <a class="header-left__logo" href="index.html">
+               <img class="header-left-logo__img" src="img/header-footer/logo.png" width="44" height="38"
+                  alt="logo BRAND">
             </a>
             <svg class="header-left__search" width="27" height="28" viewBox="0 0 27 28" fill="none"
                xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +38,7 @@
                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
             </svg>
             <!-- account  -->
-            <a class="header-right__account" href="#">
+            <a class="header-right__account" href="registration.html">
                <svg class="header-right-account__img" width="29" height="29" viewBox="0 0 29 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -68,7 +69,8 @@
             <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link" href="catalog.html">Men</a>
             </li>
             <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link active__bc" href="#">New
-                  Arrivals</a></li>
+                  Arrivals</a>
+            </li>
          </ul>
       </div>
    </aside>
@@ -78,8 +80,8 @@
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
-            <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
-               alt="">
+            <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
+               alt="avatar">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
                   purus condimentum“</span></h4>
@@ -114,7 +116,7 @@
    </footer> <!-- Footer end -->
 
    <!-- Script  -->
-   <script src="assets/js/script.js"></script>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
