complete product's page

--- a/cart.html
+++ b/cart.html
@@ -352,7 +352,7 @@
    </section>
 
    <!-- Subscribe -->
-   <aside class="subscribe">
+   <section class="subscribe">
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
@@ -372,7 +372,7 @@
             </form>
          </div>
       </div>
-   </aside> <!-- Subscribe end -->
+   </section> <!-- Subscribe end -->
 
    <!-- Footer  -->
    <footer class="footer">
