--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
    <!-- Product  -->
    <section class="product">
-      <article class="container product__wrap">
+      <div class="container product__wrap">
          <h2 class="product__h2">Fetured Items
          </h2>
          <p class="product__text">Shop for items based on what we featured in this week
          </p>
-         <div class="product__grid-wrap">
+         <article class="product__grid-wrap">
             <!-- Card-1  -->
             <div class="product__card">
                <img src="img/main/product-card1.jpg" width="360" height="420" alt="product card"
@@ -167,9 +167,9 @@
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
-         </div>
+         </article>
          <a href="catalog.html" class="product__button">Browse All Product</a>
-      </article>
+      </div>
    </section>
 
 
@@ -231,7 +231,7 @@
    </aside> <!-- Features end -->
 
    <!-- Subscribe -->
-   <aside class="subscribe">
+   <section class="subscribe">
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
@@ -251,7 +251,7 @@
             </form>
          </div>
       </div>
-   </aside> <!-- Subscribe end -->
+   </section> <!-- Subscribe end -->
 
    <!-- Footer  -->
    <footer class="footer">
