--- a/product.html
+++ b/product.html
@@ -75,6 +75,128 @@
       </div>
    </aside>
 
+   <!-- Main part -->
+   <section class="product__preview">
+      <!-- Karusel -->
+      <article class="product-preview__karusel">
+         <div class="product-karusel__arrow">
+            <i class="fas fa-chevron-left"></i>
+         </div>
+         <div class="product-karusel__img">
+            <img src="img/product/karusel-img1.png" alt="product preview">
+         </div>
+         <div class="product-karusel__arrow">
+            <i class="fas fa-chevron-right"></i>
+         </div>
+      </article> <!-- Karusel end -->
+
+      <!-- Product description  -->
+      <article class="product-preview__description container">
+         <div class="product-description__info">
+            <p class="product-description__h5">WOMEN COLLECTION</p>
+            <h4 class="product-description__h4">Moschino Cheap And Chic</h4>
+            <p class="product-description__text">Compellingly actualize fully researched processes before proactive
+               outsourcing. <br> Progressively syndicate collaborative architectures before cutting-edge services.
+               Completely
+               visualize parallel core competencies rather than exceptional portals. </p>
+            <h3 class="product-description__h3">$561</h3>
+         </div>
+
+         <form method="GET" action="#" class="product-description__sort">
+            <div class="product-description__sort-wrap">
+               <details class="product-sort__details product-sort__details--collor">
+                  <summary class="product-sort__summary">CHOOSE COLOR</summary>
+                  <div class="product-sort__position">
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="red" value="red">Red</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="yellow" value="yellow">Yellow</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="green" value="green">Green</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="blue" value="blue">Blue</label>
+                  </div>
+
+               </details>
+               <details class="product-sort__details product-sort__details--size">
+                  <summary class="product-sort__summary">CHOOSE SIZE</summary>
+                  <div class="product-sort__position">
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="xs" value="xs">XS</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="s" value="s">S</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="m" value="m">M</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="l" value="l">L</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="xl" value="xl">XL</label>
+                     <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                           name="xxl" value="xxl">XXL</label>
+                  </div>
+               </details>
+               <details class="product-sort__details product-sort__details--quantity">
+                  <summary class="product-sort__summary">QUANTITY</summary>
+                  <div class="product-sort__position">
+                     <input class="product-sort__label-input product-sort--quantity" type="number" min="1" required
+                        name="quantity">
+                  </div>
+               </details>
+            </div>
+            <button class="product-sort__button">
+               <svg class="product-sort__button-svg" xmlns="http://www.w3.org/2000/svg" width="26" height="24"
+                  viewBox="0 0 26 24">
+                  <g>
+                     <g>
+                        <path fill="black"
+                           d="M0 .978C0 .44.433-.001.96-.001H4.44c.432 0 .817.294.93.718l3.926 14.445h10.707l3.558-8.315h-11.86a.973.973 0 0 1-.962-.978c0-.538.432-.978.961-.978h13.336a.95.95 0 0 1 .801.44c.177.277.209.62.08.93l-4.391 10.27a.963.963 0 0 1-.882.588H8.574a.964.964 0 0 1-.929-.717L3.718 1.956H.961A.973.973 0 0 1 0 .977zM5.48 21.782c0-1.223.978-2.217 2.18-2.217 1.202 0 2.18.995 2.18 2.217 0 1.223-.978 2.217-2.18 2.217-1.202 0-2.18-.994-2.18-2.217zm13.64.147c-.08-1.207.818-2.283 2.02-2.364 1.202-.082 2.244.847 2.324 2.054.032.603-.144 1.174-.529 1.614a2.162 2.162 0 0 1-1.49.766h-.16c-1.139 0-2.084-.913-2.165-2.07z" />
+                     </g>
+                  </g>
+               </svg>
+               <span class="product-sort__button-span">Add to Cart</span>
+            </button>
+         </form>
+
+      </article>
+
+      <!-- Product  -->
+      <article class="product__grid-wrap container">
+         <!-- Card-1  -->
+         <div class="product__card">
+            <img src="img/product/product-preview1.jpg" width="360" height="420" alt="product card"
+               class="product-card__img">
+            <a href="product.html" class="product-card__name">
+               <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+               <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                  arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+               <p class="product-card__text-options">$52.00</p>
+            </a>
+         </div>
+         <!-- Card-2  -->
+         <div class="product__card">
+            <img src="img/product/product-preview2.jpg" width="360" height="420" alt="product card"
+               class="product-card__img">
+            <a href="product.html" class="product-card__name">
+               <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+               <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                  arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+               <p class="product-card__text-options">$52.00</p>
+            </a>
+         </div>
+         <!-- Card-3  -->
+         <div class="product__card">
+            <img src="img/product/product-preview3.jpg" width="360" height="420" alt="product card"
+               class="product-card__img">
+            <a href="product.html" class="product-card__name">
+               <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+               <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                  arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+               <p class="product-card__text-options">$52.00</p>
+            </a>
+         </div>
+      </article>
+   </section>
+
    <!-- Subscribe -->
    <aside class="subscribe">
       <div class="subscribe__wrap container">
