--- a/catalog.html
+++ b/catalog.html
@@ -174,7 +174,7 @@
                   <summary class="product-options__summary">PRICE</summary>
                   <form class="product-options__form" action="#" method="get">
                      <label class="product-form__label" for="price"><input class="product-form__label-input"
-                           type="checkbox" name="price" id="trend">TREND</label>
+                           type="checkbox" name="price" id="price">TREND</label>
                   </form>
                </details>
             </div>
