finished registration page

--- a/cart.html
+++ b/cart.html
@@ -79,16 +79,15 @@
                   <div class="shopping__card">
                      <a href="product.html">
                         <img class="shopping-card__img" src="img/cart/shopping-card1.jpg" width="262" height="306"
-                           alt="product" class="shopping-card__img">
+                           alt="product">
                      </a>
-                     <div class="shopping-card__name" href="product.html">
+                     <div class="shopping-card__name">
                         <h3 class="shopping-name__h3">MANGO PEOPLE T&#8209;SHIRT</h3>
                         <p class="shopping-card__text">Price: <span class="shopping-card__text-color">$300</span></p>
                         <p class="shopping-card__text">Color: <span class="shopping-card__text-span">Red</span></p>
                         <p class="shopping-card__text">Size: <span class="shopping-card__text-span">Xl</span></p>
                         <p class="shopping-card__text shopping-card__text-block">Quantity: </p>
-                        <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required
-                           min="1" value="2">
+                        <input class="shopping-card__input" type="number" name="quantity" required min="1" value="2">
                      </div>
                      <!-- close button -->
                      <svg class="shopping-card__close" width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -102,7 +101,7 @@
                   <div class="shopping__card">
                      <a href="product.html">
                         <img class="shopping-card__img" src="img/cart/shopping-card2.jpg" width="262" height="306"
-                           alt="product" class="shopping-card__img">
+                           alt="product">
                      </a>
                      <div class="shopping-card__name">
                         <h3 class="shopping-name__h3">MANGO PEOPLE T&#8209;SHIRT</h3>
@@ -110,8 +109,7 @@
                         <p class="shopping-card__text">Color: <span class="shopping-card__text-span">Red</span></p>
                         <p class="shopping-card__text">Size: <span class="shopping-card__text-span">Xl</span></p>
                         <p class="shopping-card__text shopping-card__text-block">Quantity: </p>
-                        <input class="shopping-card__input" type="number" name="quantity" id="cart-quantity" required
-                           min="1" value="2">
+                        <input class="shopping-card__input" type="number" name="quantity" required min="1" value="2">
                      </div>
                      <!-- close button -->
                      <svg class="shopping-card__close" width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -129,8 +127,7 @@
                      <h5 class="shopping__h5">Shopping Adress</h5>
                      <!-- Сountry selection -->
                      <div class="shopping-delivery__indent">
-                        <select class="shopping-delivery__adress shopping-delivery__adress-select" form="#"
-                           name="st.country">
+                        <select class="shopping-delivery__adress shopping-delivery__adress-select" name="st.country">
                            <option value="10396352095">Bangladesh</option>
                            <option value="10414533690">Россия</option>
                            <option value="10415971874">Казахстан</option>
@@ -349,9 +346,9 @@
                         </select>
                      </div>
                      <!-- State ​​selection -->
-                     <input type="text" class="shopping-delivery__adress shopping-delivery__color" placeholder="State">
+                     <input type="text" class="shopping-delivery__adress shopping-delivery__color" required placeholder="State">
                      <!-- Postcode -->
-                     <input type="text" class="shopping-delivery__adress shopping-delivery__color"
+                     <input type="text" class="shopping-delivery__adress shopping-delivery__color" required
                         placeholder="Postcode / Zip">
                      <button class="shopping-delivery__button" type="submit">get a quote</button>
                   </div>
