--- a/catalog.html
+++ b/catalog.html
@@ -153,7 +153,8 @@
                <details class="product-options__details">
                   <summary class="product-options__summary">TRENDING NOW</summary>
                   <form class="product-options__form" action="#" method="get">
-                     <label class="product-form__label" for="trend"><input class="product-form__label-input"
+                     <label class="product-form__label" for="trend">
+                        <input class="product-form__label-input"
                            type="checkbox" value="trend" id="trend">TREND</label>
                   </form>
                </details>
