--- a/registration.html
+++ b/registration.html
@@ -59,33 +59,32 @@
       </div>
    </header> <!-- Header end -->
 
-   <!-- New arrivals -->
-   <aside class="arrivals">
-      <div class="arrivals__wrap container">
-         <h3 class="arrivals__h3">NEW ARRIVALS </h3>
-      </div>
-   </aside> <!-- New arrivals end -->
-
-   <!-- Mian  -->
+   <!-- Main  -->
    <main class="main">
+      <!-- New arrivals -->
+      <aside class="arrivals">
+         <div class="arrivals__wrap container">
+            <h3 class="arrivals__h3">NEW ARRIVALS </h3>
+         </div>
+      </aside> <!-- New arrivals end -->
       <!-- Main part -->
       <section class="registration container">
          <!-- Form  -->
          <form class="registration__form" action="#" method="post">
             <h5 class="registration-form__h5">Your Name</h5>
-            <input class="registration-form__input input-hover" type="text" required placeholder="First Name">
-            <input class="registration-form__input input-hover" type="text" required placeholder="Last Name">
+            <input class="registration-form__input input-hover trans" type="text" required placeholder="First Name">
+            <input class="registration-form__input input-hover trans" type="text" required placeholder="Last Name">
             <label for="#" class="registration-form__label">
                <input class="registration-form__label-input" type="radio" name="gender" checked
                   value="male">Male</label>
             <label for="#" class="registration-form__label">
                <input class="registration-form__label-input" type="radio" name="gender" value="female">Female</label>
             <h5 class="registration-form__h5">Login details</h5>
-            <input class="registration-form__input input-hover" type="email" required placeholder="Email">
-            <input class="registration-form__input input-hover" type="password" required placeholder="Password">
+            <input class="registration-form__input input-hover trans" type="email" required placeholder="Email">
+            <input class="registration-form__input input-hover trans" type="password" required placeholder="Password">
             <p class="registration-form__text">Please use 8 or more characters, with at least 1 number and a mixture of
                uppercase and lowercase letters</p>
-            <button class="registration-form__button button-hover" type="submit">JOIN NOW
+            <button class="registration-form__button button-hover trans" type="submit">JOIN NOW
                <svg class="registration-form__button-arrow button-icon" width="17" height="10" viewBox="0 0 17 10"
                   fill="#f16d7f" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -109,35 +108,33 @@
             </ul>
          </article> <!-- Advantages end -->
       </section>
-   </main> <!-- Mian  end-->
-
-   <!-- Subscribe -->
-   <section class="subscribe">
-      <div class="subscribe__wrap container">
-         <!-- Subscribe info -->
-         <div class="subscribe__info">
-            <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
-               alt="avatar">
-            <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
-                  class="subscribe-info__h4-span">a pulvinar
-                  purus condimentum“</span></h4>
-         </div>
-         <!-- Subscribe form -->
-         <div class="subscribe__form-wrap">
-            <h3 class="subscribe__h3">SUBSCRIBE </h3>
-            <h4 class="subscribe__h4">FOR OUR NEWLETTER AND PROMOTION </h4>
-            <form class="subscribe__form" action="#" method="post">
-               <input class="subscribe__input input-hover trans" type="email" name="email" id="#"
-                  placeholder="Enter Your Email">
-               <button class="subscribe__button button-hover3 trans" type="submit">Subscribe</button>
-            </form>
-         </div>
-      </div>
-   </section> <!-- Subscribe end -->
+   </main> <!-- Main  end-->
 
    <!-- Footer  -->
    <footer class="footer">
-
+      <!-- Subscribe -->
+      <section class="subscribe">
+         <div class="subscribe__wrap container">
+            <!-- Subscribe info -->
+            <div class="subscribe__info">
+               <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
+                  alt="avatar">
+               <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
+                     class="subscribe-info__h4-span">a pulvinar
+                     purus condimentum“</span></h4>
+            </div>
+            <!-- Subscribe form -->
+            <div class="subscribe__form-wrap">
+               <h3 class="subscribe__h3">SUBSCRIBE </h3>
+               <h4 class="subscribe__h4">FOR OUR NEWLETTER AND PROMOTION </h4>
+               <form class="subscribe__form" action="#" method="post">
+                  <input class="subscribe__input input-hover trans" type="email" name="email" id="#"
+                     placeholder="Enter Your Email">
+                  <button class="subscribe__button button-hover3 trans" type="submit">Subscribe</button>
+               </form>
+            </div>
+         </div>
+      </section> <!-- Subscribe end -->
       <div class="footer__wrap container">
          <h5 class="footer__h5">
             &copy; 2021 Brand All Rights Reserved.
