add hovers, path 2

--- a/product.html
+++ b/product.html
@@ -165,9 +165,9 @@
       <!-- Product  -->
       <article class="product__grid-wrap container">
          <!-- Card-1  -->
-         <div class="product__card shadow trans">
+         <div class="product__card shadow filter-card trans">
             <img src="img/product/product-preview1.jpg" width="360" height="420" alt="product card"
-               class="product-card__img">
+               class="product-card__img trans">
             <a href="product.html" class="product-card__name">
                <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -176,9 +176,9 @@
             </a>
          </div>
          <!-- Card-2  -->
-         <div class="product__card shadow trans">
+         <div class="product__card shadow filter-card trans">
             <img src="img/product/product-preview2.jpg" width="360" height="420" alt="product card"
-               class="product-card__img">
+               class="product-card__img trans">
             <a href="product.html" class="product-card__name">
                <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -187,9 +187,9 @@
             </a>
          </div>
          <!-- Card-3  -->
-         <div class="product__card shadow trans">
+         <div class="product__card shadow filter-card trans">
             <img src="img/product/product-preview3.jpg" width="360" height="420" alt="product card"
-               class="product-card__img">
+               class="product-card__img trans">
             <a href="product.html" class="product-card__name">
                <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
