--- a/product.html
+++ b/product.html
@@ -142,7 +142,7 @@
                   <details class="product-sort__details product-sort__details--quantity">
                      <summary class="product-sort__summary">QUANTITY</summary>
                      <div class="product-sort__position">
-                        <input class="product-sort__label-input product-sort--quantity" type="number" min="1" required
+                        <input class="product-sort__label-input product-sort--quantity" type="number" value="1" min="1" required
                            name="quantity">
                      </div>
                   </details>
