problem solving in a Evernote

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
          </div>
       </div>
       <!-- drop burger-menu -->
-      <nav id="drop" class="header-right__drop">
+      <nav class="header-right__drop" id="dropMenu">
          <!-- close button -->
-         <div class="header-drop__close">
+         <div class="header-drop__close" id="close">
             <svg class="header-drop__close-button close" width="12" height="12" viewBox="0 0 18 18" fill="#575757"
                xmlns="http://www.w3.org/2000/svg">
                <path
