--- a/product.html
+++ b/product.html
@@ -111,13 +111,13 @@
                   <details class="product-sort__details product-sort__details--collor">
                      <summary class="product-sort__summary">CHOOSE COLOR</summary>
                      <div class="product-sort__position">
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="red" value="red">Red</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="yellow" value="yellow">Yellow</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="green" value="green">Green</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="blue" value="blue">Blue</label>
                      </div>
 
@@ -125,24 +125,24 @@
                   <details class="product-sort__details product-sort__details--size">
                      <summary class="product-sort__summary">CHOOSE SIZE</summary>
                      <div class="product-sort__position">
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="xs" value="xs">XS</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="s" value="s">S</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="m" value="m">M</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="l" value="l">L</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="xl" value="xl">XL</label>
-                        <label class="product-sort__label"><input class="product-sort__label-input" type="checkbox"
+                        <label class="product-sort__label checkbox-hover trans"><input class="product-sort__label-input" type="checkbox"
                               name="xxl" value="xxl">XXL</label>
                      </div>
                   </details>
                   <details class="product-sort__details product-sort__details--quantity">
                      <summary class="product-sort__summary">QUANTITY</summary>
                      <div class="product-sort__position">
-                        <input class="product-sort__label-input product-sort--quantity" type="number" value="1" min="1" required
+                        <input class="product-sort__label-input product-sort--quantity input-hover trans" type="number" value="1" min="1" required
                            name="quantity">
                      </div>
                   </details>
