add nav into all pages and do some fix

--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,7 @@
          <p class="header-drop__text">MENU</p>
          <ul class="header-drop__list">
             <li class="header-drop__item">
-               <a href="#" class="header-drop__item-title menu-title-hover trans">MAN</a>
+               <a href="catalog.html" class="header-drop__item-title menu-title-hover trans">MAN</a>
             </li>
             <li class="header-drop__sub-item">
                <a href="#" class="header-drop__item-link link-hover trans">Accessories</a>
@@ -146,46 +146,46 @@
                      <details class="product-filter__details">
                         <summary class="product-details__summary">CATEGORY</summary>
                         <ul class="product-details__list">
-                           <li><a class="product-list__link" href="#">Accessories</a></li>
-                           <li><a class="product-list__link" href="#">Bags</a></li>
-                           <li><a class="product-list__link" href="#">Denim</a></li>
-                           <li><a class="product-list__link" href="#">Hoodies & Sweatshirts</a></li>
-                           <li><a class="product-list__link" href="#">Jackets & Coats</a></li>
-                           <li><a class="product-list__link" href="#">Polos</a></li>
-                           <li><a class="product-list__link" href="#">Shirts</a></li>
-                           <li><a class="product-list__link" href="#">Shoes</a></li>
-                           <li><a class="product-list__link" href="#">Sweaters & Knits</a></li>
-                           <li><a class="product-list__link" href="#">T-Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Accessories</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Bags</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Denim</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Hoodies & Sweatshirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Jackets & Coats</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Polos</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shoes</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Sweaters & Knits</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">T-Shirts</a></li>
                         </ul>
                      </details>
                      <details class="product-filter__details">
                         <summary class="product-details__summary">BRAND</summary>
                         <ul class="product-details__list">
-                           <li><a class="product-list__link" href="#">Accessories</a></li>
-                           <li><a class="product-list__link" href="#">Bags</a></li>
-                           <li><a class="product-list__link" href="#">Denim</a></li>
-                           <li><a class="product-list__link" href="#">Hoodies & Sweatshirts</a></li>
-                           <li><a class="product-list__link" href="#">Jackets & Coats</a></li>
-                           <li><a class="product-list__link" href="#">Polos</a></li>
-                           <li><a class="product-list__link" href="#">Shirts</a></li>
-                           <li><a class="product-list__link" href="#">Shoes</a></li>
-                           <li><a class="product-list__link" href="#">Sweaters & Knits</a></li>
-                           <li><a class="product-list__link" href="#">T-Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Accessories</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Bags</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Denim</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Hoodies & Sweatshirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Jackets & Coats</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Polos</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shoes</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Sweaters & Knits</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">T-Shirts</a></li>
                         </ul>
                      </details>
                      <details class="product-filter__details">
                         <summary class="product-details__summary">DESIGNER</summary>
                         <ul class="product-details__list">
-                           <li><a class="product-list__link" href="#">Accessories</a></li>
-                           <li><a class="product-list__link" href="#">Bags</a></li>
-                           <li><a class="product-list__link" href="#">Denim</a></li>
-                           <li><a class="product-list__link" href="#">Hoodies & Sweatshirts</a></li>
-                           <li><a class="product-list__link" href="#">Jackets & Coats</a></li>
-                           <li><a class="product-list__link" href="#">Polos</a></li>
-                           <li><a class="product-list__link" href="#">Shirts</a></li>
-                           <li><a class="product-list__link" href="#">Shoes</a></li>
-                           <li><a class="product-list__link" href="#">Sweaters & Knits</a></li>
-                           <li><a class="product-list__link" href="#">T-Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Accessories</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Bags</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Denim</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Hoodies & Sweatshirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Jackets & Coats</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Polos</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shirts</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Shoes</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">Sweaters & Knits</a></li>
+                           <li><a class="product-list__link link-hover trans" href="#">T-Shirts</a></li>
                         </ul>
                      </details>
                   </article> <!-- Drop filter end  -->
