--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <p class="header-drop__text">MENU</p>
          <ul class="header-drop__list">
             <li class="header-drop__item">
-               <a href="#" class="header-drop__item-title menu-title-hover trans">MAN</a>
+               <a href="catalog.html" class="header-drop__item-title menu-title-hover trans">MAN</a>
             </li>
             <li class="header-drop__sub-item">
                <a href="#" class="header-drop__item-link link-hover trans">Accessories</a>
