start media queries index page

--- a/index.html
+++ b/index.html
@@ -285,10 +285,7 @@
             <a href="catalog.html" class="product__button button-hover trans">Browse All Product</a>
          </div>
       </section>
-   </main> <!-- Main  end-->
-
-
-   <!-- Feature -->
+         <!-- Feature -->
    <aside class="feature">
       <div class="feature__flex-wrap container">
          <!-- Delivery  -->
@@ -303,7 +300,7 @@
                </g>
             </svg>
             <h4 class="feature-item__h4">Free Delivery</h4>
-            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation
+            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next&#8209;generation
                innov tion
                with extensive models. </p>
          </div>
@@ -319,7 +316,7 @@
                </g>
             </svg>
             <h3 class="feature-item__h4">Sales & discounts</h3>
-            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation
+            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next&#8209;generation
                innov
                tion with extensive
                models. </p>
@@ -336,13 +333,14 @@
                </g>
             </svg>
             <h3 class="feature-item__h4">Quality assurance</h3>
-            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation
+            <p class="feature-item__text">Worldwide delivery on all. Authorit tively morph next&#8209;generation
                innov
                tion with extensive
                models. </p>
          </div>
       </div>
    </aside> <!-- Feature end -->
+   </main> <!-- Main  end-->
 
    <!-- Footer  -->
    <footer class="footer">
