--- a/index.html
+++ b/index.html
@@ -120,23 +120,36 @@
          <article class="container categories__wrap">
             <!-- card-1  -->
             <a href="#" class="categories__card categories__card1 shadow trans">
-               <h5 class="categories-wrap__h5">30% OFF</h5>
-               <h3 class="categories-wrap__h3">FOR WOMEN</h3>
+               <img class="categories-card__img scale trans" src="img/main/categories-women.jpg" alt="woman">
+               <div class="categories-card__wrap">
+                  <h5 class="categories-wrap__h5">30% OFF</h5>
+                  <h3 class="categories-wrap__h3">FOR WOMEN</h3>
+               </div>
             </a>
             <!-- card-2  -->
-            <a href="catalog.html" class="categories__card categories__card2 shadow trans">
-               <h5 class="categories-wrap__h5">HOT DEAL</h5>
-               <h3 class="categories-wrap__h3">FOR MEN</h3>
+            <a href="catalog.html" class="categories__card categories__card1 shadow trans">
+               <img class="categories-wrap__img scale trans" src="img/main/categories-men.jpg" alt="man">
+               <div class="categories-card__wrap">
+                  <h5 class="categories-wrap__h5">HOT DEAL</h5>
+                  <h3 class="categories-wrap__h3">FOR MEN</h3>
+               </div>
             </a>
             <!-- card-3  -->
-            <a href="#" class="categories__card categories__card3 shadow trans">
-               <h5 class="categories-wrap__h5">NEW ARRIVALS</h5>
-               <h3 class="categories-wrap__h3">FOR KIDS</h3>
+            <a href="#" class="categories__card categories__card1 shadow trans">
+               <img class="categories-wrap__img scale trans" src="img/main/categories-kids.jpg" alt="kids">
+               <div class="categories-card__wrap">
+                  <h5 class="categories-wrap__h5">NEW ARRIVALS</h5>
+                  <h3 class="categories-wrap__h3">FOR KIDS</h3>
+               </div>
             </a>
             <!-- card-4  -->
             <a href="#" class="categories__card categories__card4 shadow trans">
-               <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
-               <h3 class="categories-wrap__h3">ACCESORIES</h3>
+               <img class="categories-wrap__img scale trans" src="img/main/categories-accesories.jpg" alt="accesories">
+               <div class="categories-card__wrap">
+                  <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
+                  <h3 class="categories-wrap__h3">ACCESORIES</h3>
+               </div>
+
             </a>
          </article>
       </section> <!-- Categories end -->
