continue media queries cart page

--- a/cart.html
+++ b/cart.html
@@ -166,10 +166,10 @@
             </div>
             <!-- Buttons cart -->
             <article class="shopping__button">
-               <button class="shopping-button__left shopping-button__text button-hover2" type="reset">CLEAR SHOPPING
-                  CART</button>
-               <a href="catalog.html" class="shopping-button__right shopping-button__text button-hover2">CONTINUE
-                  SHOPPING</a>
+               <button class="shopping-button__left shopping-button__text button-hover2 shopping-button__media" type="reset">Clear shopping
+                  cart</button>
+               <a href="catalog.html" class="shopping-button__right shopping-button__text button-hover2 shopping-button__media">Continue
+                  shopping</a>
             </article>
          </div>
          <!-- Form container -->
@@ -404,17 +404,17 @@
                <!-- Postcode -->
                <input type="text" class="shopping-delivery__adress shopping-delivery__color input-hover" required
                   placeholder="Postcode / Zip">
-               <button class="shopping-delivery__button button-hover2" type="submit">get a quote</button>
+               <button class="shopping-delivery__button button-hover2" type="submit">Get a quote</button>
             </div>
             <!-- Total cost  -->
             <div class="shopping__totalcost">
                <p class="shopping-totalcost__small shopping-totalcost__small-indent">Sub total</p>
                <p class="shopping-totalcost__small">$900</p>
                <br>
-               <h5 class="shopping-totalcost__h5 shopping-totalcost__indent">GRAND TOTAL</h5>
+               <h5 class="shopping-totalcost__h5 shopping-totalcost__indent">Grand Total</h5>
                <h5 class="shopping-totalcost__h5 shopping-totalcost__h5-collor">$900</h5>
                <div class="shopping__border"></div>
-               <button class="shopping-totalcost__button button-hover3" type="submit">proceed to checkout</button>
+               <button class="shopping-totalcost__button button-hover3" type="submit">Proceed to checkout</button>
             </div>
          </form>
       </section> <!-- Shopping cart end -->
